--- a/views/components/card/commentCard.pug
+++ b/views/components/card/commentCard.pug
@@ -1,41 +1,45 @@
 include ../list/iconElementList
-include ../icon/iconElement
+include ../icon/imgIconElement
+include ../icon/svgIconElement
+include ../icon/svg/profileIcon
+include ../icon/svg/likeIcon
+include ../icon/svg/dislikeIcon
+include ../icon/svg/commentIcon
 
 mixin commentCard(comment, isReply=false, attrs={})
     article.comment-card&attributes(attrs)
         .comment-card__author-date 
             .comment-card__author-details
                 - let author = comment.author
-                - let profileIcon = images.profileIcon
-
+                - let icon = 'profileIcon'
+                - const classes = ['-gap-small']
+                
                 if author
+                    - let iconElementType = 'svgIconElement'
+
                     if author.profile_pic
                         - const pic = author.profile_pic
                         - const base64 = pic.data.toString('base64')
-                        - profileIcon = `data:${pic.contentType};base64,${base64}`
+                        - icon = `data:${pic.contentType};base64,${base64}`
+                        - iconElementType = 'imgIconElement'
+                        - classes.push('-avatar')
 
-                    +iconElement(
+                    +#{iconElementType}(
                         'a',
-                        profileIcon,
+                        icon,
                         author.username,
                         {
                             'href': `/users/${author.username}`,
-                            'class': [
-                                '-avatar',
-                                '-gap-small'
-                            ]
+                            'class': classes
                         }
                     )
                 else
-                    +iconElement(
+                    +svgIconElement(
                         'div',
-                        profileIcon,
+                        icon,
                         'Anonymous',
                         {
-                            'class': [
-                                '-avatar',
-                                '-gap-small'
-                            ]
+                            'class': classes
                         }
                     )
             time(
@@ -47,9 +51,9 @@ mixin commentCard(comment, isReply=false, attrs={})
                 method='post'
                 enctype='multipart/form-data'
             ).comment-card__like-reaction-form
-                +iconElement(
+                +svgIconElement(
                     'button',
-                    images.likeIcon,
+                    'likeIcon',
                     comment.likes,
                     {
                         'type': 'submit',
@@ -80,9 +84,9 @@ mixin commentCard(comment, isReply=false, attrs={})
                 method='post'
                 enctype='multipart/form-data'
             ).comment-card__dislike-reaction-form
-                +iconElement(
+                +svgIconElement(
                     'button',
-                    images.dislikeIcon,
+                    'dislikeIcon',
                     comment.dislikes,
                     {
                         'type': 'submit',
@@ -111,9 +115,9 @@ mixin commentCard(comment, isReply=false, attrs={})
                 )
             
             if !isReply
-                +iconElement(
+                +svgIconElement(
                     'button',
-                    images.commentIcon,
+                    'commentIcon',
                     comment.replies.length,
                     {
                         'class': [
