--- a/views/pages/blogPostForm.pug
+++ b/views/pages/blogPostForm.pug
@@ -4,7 +4,8 @@ include ../components/form/formInput
 include ../components/form/formTextarea
 include ../components/fragment/blogPostFragment
 include ../components/toolbar/navbar
-include ../components/icon/iconElement
+include ../components/icon/svgIconElement
+include ../components/icon/svg/expandIcon
 
 block navbar 
   +navbar(true)
@@ -16,9 +17,9 @@ block page
         section.blog-post-form-page__left
             header.blog-post-form-page__header
                 h2.blog-post-form-page__heading Draft
-                +iconElement(
+                +svgIconElement(
                     'button',
-                    images.expandIcon,
+                    'expandIcon',
                     null,
                     {
                         'class': [
@@ -88,9 +89,9 @@ block page
 
         section.blog-post-form-page__right
             header.blog-post-form-page__header
-                +iconElement(
+                +svgIconElement(
                     'button',
-                    images.expandIcon,
+                    'expandIcon',
                     null,
                     {
                         'class': [
