--- a/public/stylesheets/views/components/form/_searchbar.scss
+++ b/public/stylesheets/views/components/form/_searchbar.scss
@@ -5,21 +5,10 @@
 
 .searchbar {
     display: flex;
-    align-items: flex-end;
     gap: 10px;
-    padding-bottom: 0.2rem;
-    padding-top: 0.2rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding: 0.5rem 1rem;
     border-radius: 25px;
     background-color: colors.$bg2;
-
-    &__icon {
-        height: iSizes.$small;
-        width: iSizes.$small;
-        min-height: iSizes.$small;
-        min-width: iSizes.$small;
-    }
 
     &__input {
         width: 100%;
